# CTIQ

./: pyproject.toml
examples/: example_detectability.ipynb
examples/test_series/: EE08220F  EE0A5374  EE0BFC69  EE0E1BEE  EE18ED5C  EE1DD9B5  EE239BCB  EE23DE40  EE23EF2A  EE241DE0  EE24C491  EE28A0ED  EE29AFEA  EE303335  EE31D0D5  EE34D002  EE35A090  EE41B0D8  EE42DFBE  EE46FE3A  EE473B08  EE475370  EE4840DA  EE48F1A5  EE4D420E  EE50E78C  EE5217A4  EE526E5C  EE539E47  EE54B5A5  EE56EF70  EE5F8FCF  EE6339D3  EE6798C0  EE685874  EE696688  EE6EF527  EE6F1373  EE6F169F  EE736435  (+38 more)
pyct/: detectability.py  dicom_utils.py  global_noise_index.py  nps.py  processing.py  roi_tools.py  series.py  ttf.py
pyct/catphan700/: ctp682.py  ctp712.py  localisation.py  pipeline_detectability.py
pyct/celt_phantom/: celt.py
pyct/phantoms/: catphan700.py  celt.py
